[DEV] try to fix common safari issue caused by browser toolbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 body {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  height: -webkit-fill-available;
+  width: 100vw;
   margin: 0;
+  overflow: hidden;
   box-sizing: border-box;
   font-family: 'Roboto';
 }
